# Tensor-Train-EDA

./: .gitignore  README.md  pyproject.toml
experiments/func/: funcs_bench.py
experiments/stocks/: algos.py  api.txt  get_stock_data.py  models.py  stock_data.py
experiments/tensor_dist/: tn_prob_dist.py
notebook/: all_stock_data.csv  func_opt.ipynb  portfolio_opt.ipynb  tt_pmf.ipynb
src/tt_eda/: GraphTen.py  GraphTen_util.py  MPS_Opt.py  MPS_TN.py
